--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "husky": "^0.14.3",
     "isomorphic-fetch": "^2.2.1",
     "jest": "20.0.4",
+    "leaflet": "^1.3.1",
     "lint-staged": "^7.0.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.0",
@@ -44,6 +45,8 @@
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
+    "react-leaflet": "^2.0.0",
+    "react-player-controls": "^0.5.20",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
