--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "jest": "20.0.4",
     "leaflet": "^1.3.1",
     "lint-staged": "^7.0.0",
+    "lodash.groupby": "^4.6.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
