--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "20.0.4",
     "leaflet": "^1.3.1",
+    "leaflet-tile-loading-progress-control": "^0.0.3",
     "lint-staged": "^7.0.0",
     "lodash.groupby": "^4.6.0",
     "moment": "^2.22.2",
@@ -43,10 +44,10 @@
     "prop-types": "^15.6.2",
     "query-string": "5.1.1",
     "raf": "3.4.0",
-    "react": "^16.2.0",
+    "react": "16.4.2",
     "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.2.0",
-    "react-leaflet": "^2.0.0",
+    "react-dom": "16.4.2",
+    "react-leaflet": "1.9.1",
     "react-player-controls": "^0.5.20",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
