--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,7 @@
     "lint-staged": "^7.0.0",
     "lodash.groupby": "^4.6.0",
     "moment": "^2.22.2",
-    "node-sass": "^4.9.0",
+    "node-sass": "4.12.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
