--- a/client/package.json
+++ b/client/package.json
@@ -36,13 +36,13 @@
     "lint-staged": "^7.0.0",
     "lodash.groupby": "^4.6.0",
     "moment": "^2.22.2",
-    "node-sass": "4.12.0",
+    "node-sass": "^8.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "prettier": "^1.11.0",
     "promise": "8.0.1",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.5.8",
     "query-string": "5.1.1",
     "raf": "3.4.0",
     "react": "16.4.2",
