--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "us-weather-monitor",
   "version": "1.0.0",
   "engines": {
-    "node": "12.16.1"
+    "node": "18.13.0"
   },
   "scripts": {
     "client": "cd client && yarn start",
@@ -19,7 +19,8 @@
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.23.0",
     "concurrently": "^3.5.0",
-    "express": "^4.16.2",
-    "isomorphic-fetch": "^2.2.1"
+    "express": "^4.18.2",
+    "isomorphic-fetch": "^2.2.1",
+    "url": "^0.11.0"
   }
 }
